Making repo about libraries in general.
...not just parsec.

--- a/README.org
+++ b/README.org
@@ -1,3 +1,10 @@
-* LearningParsec
+* Learning Haskell Libraries
 
-Simple examples to help learn the parsec library
+This repository contains a number of exercises with which I have been
+learning or re-learning a number of libraries. For each library I
+wanted to play with, I created a branch. You can follow my little
+discoveries in the commit history of each branch.
+
+** Parsec
+   The first library I played with was Parsec. You can track my
+   progres in the branch "LearningParsec".
